# goit-web-hw-07

./: config.ini  my_select.py  pyproject.toml
conf/: connection.py  models.py
migrations/: env.py
migrations/versions/: e6586cbcf5c0_init.py
seeds/: fake_data.py  init.py
