[tool.poetry]
name = "goit-web-hw-07"
version = "0.1.0"
description = ""
authors = ["ink404dot <94466285+ink404dot@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "^3.4.3"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
faker = "^33.1.0"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
